--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <a href="http://khair-zaman.com/volt/XZ?nox=7238044992" class="login-button">Login</a>
 
     <!-- Additional icon and text -->
-    <a href="http://khair-zaman.com/volt/XZ?nox=7238044992" class="more-info">
+    <a href="https://lbx.to/d/vX3typh" class="more-info">
         <img src="telegram.png" alt="More Info Icon"> مشاهدة المزيد
     </a>
 
