--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-         <title>Telegram invite🔞</title>
+         <title>telegram invita 🔞</title>
+    <link rel="icon" href="path-to-your-favicon.ico" type="image/x-icon">
     <style>
         /* Set the background image */
         body {
