--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            background-color: white;
+            background-color: rgba(255, 255, 255, 0.1);
             color: black;
             border: 2px solid black;
             padding: 20px;
